--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -1,6 +1,9 @@
 :root{
     --azure: #8ac6ff;
     --primary: #00478a;
+    --secondary: #0064c2;
+    --white: #fff;
+
 }
 
 /* reset */
@@ -11,45 +14,168 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    box-sizing: border-box;
 }
 
 /* general */
-body{
+.body-container{
     background-color: var(--azure);
-    color: var(--primary)
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--azure);
+    color: var(--primary);
+    padding: 0 15rem;
+    gap: 7rem;
+}
+
+.boxes{
+    display: inline-block;
+    width: 100%;
+    border: solid 3px var(--primary);
+    background-color: var(--white);
+    box-shadow: var(--primary) .18rem 0.18rem 0rem 0rem;
+    padding: 3.5rem 4rem;
+}
+
+/* menu */
+header{
+    display: flex;
+    justify-content: center;
+    min-height: 200px;
+    width: 100%;
+    background-color: var(--azure);
+    border-bottom: solid 5px var(--primary);
+}
+
+nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+header ul{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    gap: 2.25rem;
+}
+
+/* content */
+.cta-box{
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    justify-items: center;
+    margin-top: 5rem;
+}
+
+.services-box {
+    width: 50vw;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.about-box {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: row;
+}
+
+.about-box-image{
+    width: 30%;
+    max-width: 100%;
+}
+
+/* footer */
+footer{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 3rem;
+    gap: 3rem;
+}
+
+footer ul{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    gap: 2.25rem;
+    list-style: none
+    ;
+}
+
+/* button */
+button{
+    width: 16rem;
+    height: 4rem;
+    font-family: "Dela Gothic One", Arial, Helvetica, sans-serif;
+    font-size: 1.8rem;
+    background-color: var(--secondary);
+    color: var(--white);
+    border-radius: 2.5rem;
+    border: solid 3px var(--primary);
 }
 
 /* typography */
-h1 {
+.menu__items li{
     font-family: "Dela Gothic One", Arial, Helvetica, sans-serif;
-    font-size: 2.25em;
-    letter-spacing: -0.025em;
-    margin: 0 0 .5em 0;
+    font-size: 1.8rem;
+    letter-spacing: -0.025rem;
+    margin: 0 0 .5rem 0; 
+    list-style-type: none;
+    color: var(--primary);
 }
 
+.menu__items a:link{
+    color: var(--primary);
+    text-decoration: none;
+}
+
+.menu__items a:focus{
+    color: var(--primary);
+}
+
+h1 {
+    font-family: "Dela Gothic One", Arial, Helvetica, sans-serif;
+    font-size: 3rem;
+    letter-spacing: -0.025rem;
+    margin: 0 0 .5rem 0;
+}
+
+
 h2 {
-    font-size: 1.25em
+    font-family:"Work Sans", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.25rem
 }
 
 h3 {
-    font-size: 1em
+    font-family:"Work Sans", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1rem
 }
 
 h4 {
-    font-size: .8em
+    font-size: .8rem
 }
 
 h5 {
-    font-size: .6em
+    font-size: .6rem
 }
 
 h6 {
-    font-size: .6em
+    font-size: .6rem
 }
 
 p, .services-box__list-element{
     font-family:"Work Sans", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.375em;
+    font-size: 1.375rem;
     line-height: 1.375;
     font-weight: 400;
 }
